[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Elizaveta <kirileneliza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.flake8]
max-line-length = 119
exclude = '.git', __pycache__

[tool.isort]
line_length = 119








